--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "阳光的个人网站",
     "start_url": "/",
     "id":"/"
-    "background_color": "#00aae7",
+    "background_color": "#ffffff",
     "theme_color": "#76d8ff",
     "dir": "auto",
     "display": "standalone",
