--- a/seochecker-manifest-2310.json
+++ b/seochecker-manifest-2310.json
@@ -1,9 +1,9 @@
 {
 	"short_name": "阳光",
 	"name": "阳光",
-	"lang": "zh",
+	"lang": "zh-CN",
 	"description": "阳光的个人网站",
-	"start_url": "/",
+	"start_url": "https://leihua666.github.io/yangguang",
 	"background_color": "#00aae7",
 	"theme_color": "#00aae7",
 	"dir": "auto",
