--- a/seochecker-manifest-2310.json
+++ b/seochecker-manifest-2310.json
@@ -3,7 +3,7 @@
 	"name": "阳光",
 	"lang": "zh-CN",
 	"description": "阳光的个人网站",
-	"start_url": "https://leihua666.github.io/yangguang",
+	"start_url": "https://leihua666.github.io/yangguang/seochecker-manifest-2310.json",
 	"background_color": "#00aae7",
 	"theme_color": "#00aae7",
 	"dir": "auto",
